src/test/deca/syntax/invalid/testSmallFloat.deca
{
	float b = 2.0e-290;
}
